--- a/index2.html
+++ b/index2.html
@@ -59,9 +59,9 @@
             <img class="d-block mx-auto mb-4"
                  src="" alt="me or my logo" width="72"
                  height="57">
-            <h1 class="display-5 fw-bold">Hi, im Tomek</h1>
+            <h1 class="display-5 fw-bold">Cześć, jestem Tomek</h1>
             <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">PHP developer</p>
+                <p class="lead mb-4">PHP Developer</p>
             </div>
         </div>
     </section>
