--- a/index2.html
+++ b/index2.html
@@ -61,7 +61,7 @@
                  height="57">
             <h1 class="display-5 fw-bold">Cześć, jestem Tomek</h1>
             <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">PHP Developer</p>
+                <p class="lead mb-4">Programista PHP</p>
             </div>
         </div>
     </section>
