--- a/index2.html
+++ b/index2.html
@@ -262,12 +262,12 @@
     </section>
     <section id="certification-section" hidden="hidden">
         <div class="container py-4">
-            <h2 class="pb-2 border-bottom text-center">Certification</h2>
+            <h2 class="pb-2 border-bottom text-center">Certyfikaty</h2>
             <div class="p-5 mb-4 bg-light rounded-3">
                 <div class="container-fluid py-1">
-                    <h4 class="display-5 fw-bold">Custom jumbotron</h4>
-                    <h5>UDEMY</h5>
-                    <button class="btn btn-primary btn-lg" type="button">Example button</button>
+                    <h4 class="display-5 fw-bold">Nazwa Certyfikatu</h4>
+                    <h5>Firma Wystawiająca certyfikat</h5>
+                    <button class="btn btn-primary btn-lg" type="button">Zobacz Certyfikat</button>
                 </div>
             </div>
         </div>
