--- a/index2.html
+++ b/index2.html
@@ -272,8 +272,8 @@
             </div>
         </div>
     </section>
-    <section id="project-section" hidden="hidden">
-        <h2 class="pb-2 border-bottom text-center">My projects</h2>
+    <section id="project-section" >
+        <h2 class="pb-2 border-bottom text-center">Projekty</h2>
         <div class="container">
             <ul class="row portfolio list-unstyled mb-0 boxed-portfolio">
                 <!-- project -->
@@ -290,8 +290,8 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="#" class="card-title title-link fs-16 fw-bold">FOIL LOGO</a>
-                            <p class="card-text mt-5 mb-0 fs-14"><b>Skills:</b> Design, Branding</p>
+                            <a href="#" class="card-title title-link fs-16 fw-bold">Projekt</a>
+                            <p class="card-text mt-5 mb-0 fs-14"><b>Technologie wykorzystane:</b> PHP, Symfony</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
                 </li><!-- / project -->
@@ -310,8 +310,8 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="#" class="card-title title-link fs-16 fw-bold">MOUNTAINS</a>
-                            <p class="card-text mt-5 mb-0 fs-14"><b>Skills:</b> Design, Illustration</p>
+                            <a href="#" class="card-title title-link fs-16 fw-bold">Projekt</a>
+                            <p class="card-text mt-5 mb-0 fs-14"><b>Technologie wykorzystane:</b>  PHP,OOP</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
                 </li><!-- / project -->
@@ -330,8 +330,8 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="#" class="card-title title-link fs-16 fw-bold">CAMERON</a>
-                            <p class="card-text mt-5 mb-0 fs-14"><b>Skills:</b> Design</p>
+                            <a href="#" class="card-title title-link fs-16 fw-bold">Projekt</a>
+                            <p class="card-text mt-5 mb-0 fs-14"><b>Technologie wykorzystane:</b> PHP</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
                 </li><!-- / project -->
