--- a/index2.html
+++ b/index2.html
@@ -360,7 +360,7 @@
 </main>
 <footer class="footer mt-auto py-3 bg-light">
     <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+        <span class="text-muted" id="footer-content">Copyright ® 2022 by Scoobydowsky</span>
     </div>
 </footer>
 <script src="src/js/bootstrap.bundle.min.js"></script>
