--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,7 @@
     <script src="index.js"></script>
 </head>
 <body>
+<script>setLangEN()</script>
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -45,10 +46,10 @@
     <div class="mx-auto order-0">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#"><img src="src/img/poland_flag.png" alt="pl"></a>
+                <a class="nav-link" href="#" onclick="setLangPL()"><img src="src/img/poland_flag.png" alt="pl"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#"><img src="src/img/usa_flag.png" alt="en"></a>
+                <a class="nav-link" href="#" onclick="setLangEN()"><img src="src/img/usa_flag.png" alt="en"></a>
             </li>
         </ul>
     </div>
