--- a/index2.html
+++ b/index2.html
@@ -20,25 +20,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#about-me-section">O mnie</a>
+                    <a class="nav-link active" aria-current="page" id="about-me-link" href="#about-me-section">O mnie</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#skills-section">Umiejętności</a>
+                    <a class="nav-link" id="skills-link" href="#skills-section">Umiejętności</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#education-section">Wykształcenie</a>
+                    <a class="nav-link" id="education-link" href="#education-section">Wykształcenie</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#experience-section">Doświadczenie</a>
+                    <a class="nav-link disabled" id="experience-link" href="#experience-section">Doświadczenie</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#certification-section">Certyfikaty</a>
+                    <a class="nav-link disabled" id="certification-link" href="#certification-section">Certyfikaty</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#project-section">Projekty</a>
+                    <a class="nav-link disabled" id="project-link" href="#project-section">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact-section">Kontakt</a>
+                    <a class="nav-link" id="contact-link" href="#contact-section">Contact</a>
                 </li>
             </ul>
         </div>
@@ -58,11 +58,11 @@
     <section id="hello-section">
         <div class="px-4 py-5 my-5 text-center">
             <img class="d-block mx-auto mb-4"
-                 src="" alt="me or my logo" width="72"
-                 height="57">
-            <h1 class="display-5 fw-bold">Cześć, jestem Tomek</h1>
+                 src="src/avataaars.svg" alt="me or my logo" width="10%"
+                 >
+            <h1 class="display-5 fw-bold" id="hello-section-welcome">Cześć, jestem Tomek</h1>
             <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Programista PHP</p>
+                <p class="lead mb-4" id="hello-section-description">Programista PHP</p>
             </div>
         </div>
     </section>
@@ -81,17 +81,16 @@
 
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">Cześć.</h1>
-                    <p class="lead">Witaj, nazywam się Tomasz Woytkowiak. Studiuję informatykę na Collegium Da vinci w Poznaniu.
-                        W swoich projektach wykorzystuje PHP , obecnie uczę się wykorzystania Frameworku Symfony 5.
-                        Hobbystycznie tworzę różne rzeczy przy wykorzystaniu Arduino.
+                    <h1 class="display-5 fw-bold lh-1 mb-3" id="aboutMe-section-label">Cześć.</h1>
+                    <p class="lead" id="aboutMe-section-description">Witaj, nazywam się Tomasz Woytkowiak. Studiuję informatykę na Collegium Da vinci w Poznaniu.
+                        W swoicdfsdfsdfsdfsdfsdfsy przy wykorzystaniu Arduino.
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <div class="m-5">Hobby:
-                            <ul>
-                                <li>Programowanie</li>
-                                <li>Gry komputerowe</li>
-                                <li>Numizmatyka</li>
+                        <div class="m-5" id="aboutMe-section-hobby-label">Hobby:
+                            <ul><!-- error here-->
+                                <li id="aboutMe-section-hobby1">Programowanie</li>
+                                <li id="aboutMe-section-hobby2">Gry komputerowe</li>
+                                <li id="aboutMe-section-hobby3">Numizmatyka</li>
                             </ul>
                         </div>
                     </div>
@@ -101,7 +100,7 @@
     </section>
     <section id="skills-section">
         <div class="container">
-            <h2 class="pb-2 border-bottom text-center">Skills</h2>
+            <h2 class="pb-2 border-bottom text-center" id="skills-section-label">Umiejętności</h2>
             <div>
                 <div class="container">
                     <div class="row">
@@ -117,7 +116,7 @@
                                             </div>
                                         </div>
                                     </h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                    <p class="card-text" id="skills-section-skill1-dsc">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
                                 </div>
                             </div>
@@ -134,7 +133,7 @@
                                             </div>
                                         </div>
                                     </h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                    <p class="card-text" id="skills-section-skill2-dsc">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
                                 </div>
                             </div>
@@ -151,7 +150,7 @@
                                             </div>
                                         </div>
                                     </h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                    <p class="card-text" id="skills-section-skill3-dsc">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
                                 </div>
                             </div>
@@ -170,7 +169,7 @@
                                             </div>
                                         </div>
                                     </h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                    <p class="card-text" id="skills-section-skill4-dsc">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
                                 </div>
                             </div>
@@ -215,7 +214,7 @@
         </div>
     </section>
     <section id="education-section">
-        <h2 class="pb-2 border-bottom text-center">Education</h2>
+        <h2 class="pb-2 border-bottom text-center">Wykształcenie</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -224,7 +223,7 @@
                             <div>
                                 <ul class="timeline">
                                     <li class="event" data-date="2021-obecnie">
-                                        <h1 class="fw-bold">Informatyk Inżynier</h1>
+                                        <h1 class="fw-bold">Inżynier Informatyk</h1>
                                         <h6>Collegium Da Vinci w Poznaniu</h6>
                                     </li>
                                     <li class="event" data-date="2013 - 2017">
