--- a/index2.html
+++ b/index2.html
@@ -86,7 +86,7 @@
                         W swoicdfsdfsdfsdfsdfsdfsy przy wykorzystaniu Arduino.
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <div class="m-5" id="aboutMe-section-hobby-label">Hobby:
+                        <div class="m-5" ><div id="aboutMe-section-hobby-label">Hobby:</div>
                             <ul><!-- error here-->
                                 <li id="aboutMe-section-hobby1">Programowanie</li>
                                 <li id="aboutMe-section-hobby2">Gry komputerowe</li>
@@ -186,7 +186,7 @@
                                             </div>
                                         </div>
                                     </h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                    <p class="card-text" id="skills-section-skill5-dsc">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
                                 </div>
                             </div>
@@ -203,7 +203,7 @@
                                             </div>
                                         </div>
                                     </h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                    <p class="card-text" id="skills-section-skill6-dsc">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
                                 </div>
                             </div>
@@ -214,7 +214,7 @@
         </div>
     </section>
     <section id="education-section">
-        <h2 class="pb-2 border-bottom text-center">Wykształcenie</h2>
+        <h2 class="pb-2 border-bottom text-center" id="education-section-desciption">Wykształcenie</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -222,13 +222,13 @@
                         <div class="card-body">
                             <div>
                                 <ul class="timeline">
-                                    <li class="event" data-date="2021-obecnie">
-                                        <h1 class="fw-bold">Inżynier Informatyk</h1>
-                                        <h6>Collegium Da Vinci w Poznaniu</h6>
+                                    <li class="event" data-date="2021-obecnie" id="education-section-school2-date">
+                                        <h1 class="fw-bold" id="education-section-school2-title">Inżynier Informatyk</h1>
+                                        <h6 id="education-section-school2-name">Collegium Da Vinci w Poznaniu</h6>
                                     </li>
-                                    <li class="event" data-date="2013 - 2017">
-                                        <h1 class="fw-bold">Technik Informatyk</h1>
-                                        <h6>Zespół Szkół Technicznych w Lesznie</h6>
+                                    <li class="event" data-date="2013 - 2017" id="education-section-school1-date">
+                                        <h1 class="fw-bold" id="education-section-school1-title">Technik Informatyk</h1>
+                                        <h6 id="education-section-school1-name">Zespół Szkół Technicznych w Lesznie</h6>
                                     </li>
                                 </ul>
                             </div>
@@ -239,7 +239,7 @@
         </div>
     </section>
     <section id="experience-section" hidden="hidden">
-        <h2 class="pb-2 border-bottom text-center">Experience</h2>
+        <h2 class="pb-2 border-bottom text-center" id="experience-section-label">Experience</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -247,10 +247,10 @@
                         <div class="card-body">
                             <div id="content">
                                 <ul class="timeline">
-                                    <li class="event" data-date="N/A">
-                                        <h1 class="fw-bold">Programista PHP</h1>
-                                        <h6>Brak Firmy</h6>
-                                        <p>Nie mam jeszcze żadnego doświadczenia</p>
+                                    <li class="event" data-date="N/A" id="experience-section-work1-date">
+                                        <h1 class="fw-bold" id="experience-section-work1-job">Programista PHP</h1>
+                                        <h6 id="experience-section-work1-company">Brak Firmy</h6>
+                                        <p id="experience-section-work1-dsc">Nie mam jeszcze żadnego doświadczenia</p>
                                     </li>
                                 </ul>
                             </div>
@@ -262,12 +262,12 @@
     </section>
     <section id="certification-section" hidden="hidden">
         <div class="container py-4">
-            <h2 class="pb-2 border-bottom text-center">Certyfikaty</h2>
+            <h2 class="pb-2 border-bottom text-center" id="certification-section-label">Certyfikaty</h2>
             <div class="p-5 mb-4 bg-light rounded-3">
                 <div class="container-fluid py-1">
-                    <h4 class="display-5 fw-bold">Nazwa Certyfikatu</h4>
-                    <h5>Firma Wystawiająca certyfikat</h5>
-                    <button class="btn btn-primary btn-lg" type="button">Zobacz Certyfikat</button>
+                    <h4 class="display-5 fw-bold" id="certification-section-certificate1-name">Nazwa Certyfikatu</h4>
+                    <h5 id="certification-section-certificate1-company">Firma Wystawiająca certyfikat</h5>
+                    <button class="btn btn-primary btn-lg" type="button" id="certification-section-cerificate1-check">Zobacz Certyfikat</button>
                 </div>
             </div>
         </div>
