--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pl">
+<html lang="en">
 <head>
     <title>Tomasz "Scoobydowsky" Woytkowiak</title>
     <meta charset="utf-8">
@@ -10,7 +10,6 @@
     <script src="index.js"></script>
 </head>
 <body>
-<script>setLangEN()</script>
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -60,9 +59,9 @@
             <img class="d-block mx-auto mb-4"
                  src="src/avataaars.svg" alt="me or my logo" width="10%"
                  >
-            <h1 class="display-5 fw-bold" id="hello-section-welcome">Cześć, jestem Tomek</h1>
+            <h1 class="display-5 fw-bold" id="hello-section-welcome">Hi, im Tomek</h1>
             <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4" id="hello-section-description">Programista PHP</p>
+                <p class="lead mb-4" id="hello-section-description">PHP Developer</p>
             </div>
         </div>
     </section>
@@ -81,16 +80,15 @@
 
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold lh-1 mb-3" id="aboutMe-section-label">Cześć.</h1>
-                    <p class="lead" id="aboutMe-section-description">Witaj, nazywam się Tomasz Woytkowiak. Studiuję informatykę na Collegium Da vinci w Poznaniu.
-                        W swoicdfsdfsdfsdfsdfsdfsy przy wykorzystaniu Arduino.
+                    <h1 class="display-5 fw-bold lh-1 mb-3" id="aboutMe-section-label">About me</h1>
+                    <p class="lead" id="aboutMe-section-description">Hi, my name Tomasz Woytkowiak. Im currently studing IT at Collegium Da Vinci in Poznań. In my project i use PHP , curently i learn usage Symfony 5 usage. As a hobby, I create different things using Arduino.";
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <div class="m-5" ><div id="aboutMe-section-hobby-label">Hobby:</div>
                             <ul><!-- error here-->
-                                <li id="aboutMe-section-hobby1">Programowanie</li>
-                                <li id="aboutMe-section-hobby2">Gry komputerowe</li>
-                                <li id="aboutMe-section-hobby3">Numizmatyka</li>
+                                <li id="aboutMe-section-hobby1">Programming</li>
+                                <li id="aboutMe-section-hobby2">Computer games</li>
+                                <li id="aboutMe-section-hobby3">Collecting coins</li>
                             </ul>
                         </div>
                     </div>
@@ -100,7 +98,7 @@
     </section>
     <section id="skills-section">
         <div class="container">
-            <h2 class="pb-2 border-bottom text-center" id="skills-section-label">Umiejętności</h2>
+            <h2 class="pb-2 border-bottom text-center" id="skills-section-label">Skills</h2>
             <div>
                 <div class="container">
                     <div class="row">
@@ -214,7 +212,7 @@
         </div>
     </section>
     <section id="education-section">
-        <h2 class="pb-2 border-bottom text-center" id="education-section-desciption">Wykształcenie</h2>
+        <h2 class="pb-2 border-bottom text-center" id="education-section-desciption">Education</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -222,13 +220,13 @@
                         <div class="card-body">
                             <div>
                                 <ul class="timeline">
-                                    <li class="event" data-date="2021-obecnie" id="education-section-school2-date">
-                                        <h1 class="fw-bold" id="education-section-school2-title">Inżynier Informatyk</h1>
-                                        <h6 id="education-section-school2-name">Collegium Da Vinci w Poznaniu</h6>
+                                    <li class="event" data-date="2021-present" id="education-section-school2-date">
+                                        <h1 class="fw-bold" id="education-section-school2-title">IT Engineer</h1>
+                                        <h6 id="education-section-school2-name">Collegium Da Vinci in Poznań</h6>
                                     </li>
                                     <li class="event" data-date="2013 - 2017" id="education-section-school1-date">
-                                        <h1 class="fw-bold" id="education-section-school1-title">Technik Informatyk</h1>
-                                        <h6 id="education-section-school1-name">Zespół Szkół Technicznych w Lesznie</h6>
+                                        <h1 class="fw-bold" id="education-section-school1-title">IT Technician</h1>
+                                        <h6 id="education-section-school1-name">Zespół Szkół Technicznych in Leszno</h6>
                                     </li>
                                 </ul>
                             </div>
@@ -248,9 +246,9 @@
                             <div id="content">
                                 <ul class="timeline">
                                     <li class="event" data-date="N/A" id="experience-section-work1-date">
-                                        <h1 class="fw-bold" id="experience-section-work1-job">Programista PHP</h1>
-                                        <h6 id="experience-section-work1-company">Brak Firmy</h6>
-                                        <p id="experience-section-work1-dsc">Nie mam jeszcze żadnego doświadczenia</p>
+                                        <h1 class="fw-bold" id="experience-section-work1-job">PHP Developer</h1>
+                                        <h6 id="experience-section-work1-company">No company</h6>
+                                        <p id="experience-section-work1-dsc">Im not have any experience</p>
                                     </li>
                                 </ul>
                             </div>
@@ -262,18 +260,18 @@
     </section>
     <section id="certification-section" >
         <div class="container py-4">
-            <h2 class="pb-2 border-bottom text-center" id="certification-section-label">Certyfikaty</h2>
+            <h2 class="pb-2 border-bottom text-center" id="certification-section-label">Certification</h2>
             <div class="p-5 mb-4 bg-light rounded-3">
                 <div class="container-fluid py-1">
-                    <h4 class="display-5 fw-bold" id="certification-section-certificate1-name">Nazwa Certyfikatu</h4>
-                    <h5 id="certification-section-certificate1-company">Firma Wystawiająca certyfikat</h5>
-                    <button class="btn btn-primary btn-lg" type="button"><div id="certification-section-certificate1-check">Zobacz Certyfikat</div></button>
+                    <h4 class="display-5 fw-bold" id="certification-section-certificate1-name">Name certificate</h4>
+                    <h5 id="certification-section-certificate1-company">Company</h5>
+                    <button class="btn btn-primary btn-lg" type="button"><div id="certification-section-certificate1-check">See Certificate</div></button>
                 </div>
             </div>
         </div>
     </section>
     <section id="project-section">
-        <h2 class="pb-2 border-bottom text-center" id="project-section-label">Projekty</h2>
+        <h2 class="pb-2 border-bottom text-center" id="project-section-label">Projects</h2>
         <div class="container">
             <ul class="row portfolio list-unstyled mb-0 boxed-portfolio">
                 <!-- project -->
@@ -290,7 +288,7 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="#" class="card-title title-link fs-16 fw-bold" id="project-section-project1-name">Projekt</a>
+                            <a href="#" class="card-title title-link fs-16 fw-bold" id="project-section-project1-name">Project 1</a>
                             <p class="card-text mt-5 mb-0 fs-14"><b>Stack:</b> PHP, Symfony</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
@@ -310,7 +308,7 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="#" class="card-title title-link fs-16 fw-bold" id="project-section-project2-name">Projekt</a>
+                            <a href="#" class="card-title title-link fs-16 fw-bold" id="project-section-project2-name">Project 2</a>
                             <p class="card-text mt-5 mb-0 fs-14"><b>Stack:</b>  PHP,OOP</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
@@ -330,7 +328,7 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="#" class="card-title title-link fs-16 fw-bold" id="project-section-project3-name">Projekt</a>
+                            <a href="#" class="card-title title-link fs-16 fw-bold" id="project-section-project3-name">Project 3</a>
                             <p class="card-text mt-5 mb-0 fs-14"><b>Stack:</b> PHP</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
@@ -341,7 +339,7 @@
     <section id="contact-section">
         <div class="bg-dark text-secondary px-4 py-5 text-center">
             <div class="py-5">
-                <h1 class="display-5 fw-bold text-white" id="contact-section-label">Kontakt</h1>
+                <h1 class="display-5 fw-bold text-white" id="contact-section-label">Contact</h1>
                 <div class="col-lg-6 mx-auto">
                     <p class="fs-5 mb-4">
                     <div class="m-2">
