--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
                     <a class="nav-link active" aria-current="page" id="about-me-link" href="#about-me-section">About me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="skills-link" href="#skills-section">Skills</a>
+                    <a class="nav-link" id="skills-link" href="#skills-section">Tech</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="education-link" href="#education-section">Education</a>
@@ -69,7 +69,7 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-6">
-                    <img src=""
+                    <img src="src/me.jpg"
                          class="d-block mx-lg-auto img-fluid" alt="me" width="700" height="500"
                          loading="lazy" >
                     <div class="m-4 align-items-center align-self-center">
@@ -85,7 +85,7 @@
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <div class="m-5" ><div id="aboutMe-section-hobby-label">Hobby:</div>
-                            <ul><!-- error here-->
+                            <ul>
                                 <li id="aboutMe-section-hobby1">Programming</li>
                                 <li id="aboutMe-section-hobby2">Computer games</li>
                                 <li id="aboutMe-section-hobby3">Collecting coins</li>
@@ -98,7 +98,7 @@
     </section>
     <section id="skills-section">
         <div class="container">
-            <h2 class="pb-2 border-bottom text-center" id="skills-section-label">Skills</h2>
+            <h2 class="pb-2 border-bottom text-center" id="skills-section-label">Tech</h2>
             <div>
                 <div class="container">
                     <div class="row">
