--- a/index.html
+++ b/index.html
@@ -361,6 +361,6 @@
     </div>
 </footer>
 <script>setLangEN()</script>
-<script src="Scoobydowsky.github.io/src/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
