--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="m-4 align-items-center align-self-center">
                         <i class="fa-brands fa-linkedin fa-2xl" onclick="openLinkedin()"></i>
                         <i class="fa-brands fa-github fa-2xl" onclick="openGithubProfile()"></i>
-                        <i class="fa-solid fa-file fa-2xl" onclick="downloadCV()"></i>
+                        <i class="fa-solid fa-file fa-2xl" onclick="downloadCV()" hidden="hidden"></i>
                     </div>
 
                 </div>
